# crc32csum

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  readme.md
.github/workflows/: build-tags.yml  pr.yml
cmake/: UniversalAppleBuild.cmake
src/: crc32csum-test.cpp  crc32csum.cpp  crc32csum.h
